objects/Performance_Data__c.object
<CustomObject>
    <description>used for Energy/Powertrack and Salesforce integration, will upload data into the object</description>
    <fields>
        <fullName>Active_alerts__c</fullName>
        <label>Active alerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Estimate__c</fullName>
        <formula>IF( 
OR( 
ISBLANK(Measured_Production__c ), 
ISBLANK(Estimated_Production__c), 
Estimated_Production__c = 0 
), 
null, 
Measured_Production__c / Estimated_Production__c 
)</formula>
        <label>Actual/Estimate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Expected__c</fullName>
        <formula>IF( 
OR( 
ISBLANK(Measured_Production__c ), 
ISBLANK(Expected_Production__c), 
Expected_Production__c = 0 
), 
null, 
Measured_Production__c / Expected_Production__c
)</formula>
        <label>Actual/Expected</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_2__c</fullName>
        <formula>Site__r.Contract__r.ContractNumber</formula>
        <inlineHelpText>pulls service contract from related Site</inlineHelpText>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_alerts__c</fullName>
        <label>Current alerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Availability__c</fullName>
        <label>Data Availability</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_GHI__c</fullName>
        <description>or upload purposes only.   data from powertrack comes in watts, there is another field doing a calculation off this field that converts it to kwh for the user interface and reporting.</description>
        <inlineHelpText>for upload purposes only.   data from powertrack comes in watts, there is another field doing a calculation off this field that converts it to kwh for the user interface and reporting.</inlineHelpText>
        <label>Estimated GHI w</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_GHI_kWh__c</fullName>
        <formula>Estimated_GHI__c /1000</formula>
        <label>Estimated GHI kWh</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Production__c</fullName>
        <inlineHelpText>kWh</inlineHelpText>
        <label>Estimated Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Production__c</fullName>
        <inlineHelpText>kWh</inlineHelpText>
        <label>Expected Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GHI_Measured__c</fullName>
        <inlineHelpText>Kilowatt hours/meter²</inlineHelpText>
        <label>GHI Measured</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GHI_Percent__c</fullName>
        <formula>IF(
     OR(
          ISBLANK(GHI_Measured__c),
          ISBLANK( Estimated_GHI_kWh__c ),
          Estimated_GHI_kWh__c = 0
     ),
     null,
     GHI_Measured__c /Estimated_GHI_kWh__c/1000
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GHI Percent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lost_Production__c</fullName>
        <inlineHelpText>Kilowatt hours</inlineHelpText>
        <label>Lost Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measured_Production__c</fullName>
        <inlineHelpText>Kilowatt hours</inlineHelpText>
        <label>Measured Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Error_Root_Cause__c</fullName>
        <label>Model Error Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pyranometer Calibration or Failure</fullName>
                </value>
                <value>
                    <fullName>Pyranometer Installation</fullName>
                </value>
                <value>
                    <fullName>Pyranometer Setup</fullName>
                </value>
                <value>
                    <fullName>Module Temperature Sensor Failure</fullName>
                </value>
                <value>
                    <fullName>Module Temperature (Detached or Incorrect Installation)</fullName>
                </value>
                <value>
                    <fullName>Weather Station Failure</fullName>
                </value>
                <value>
                    <fullName>Incorrect or No Shading in Model</fullName>
                </value>
                <value>
                    <fullName>Incorrect Model Setup (Platform Limitation/Array Complexity)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Model Setup (Borrego)</fullName>
                </value>
                <value>
                    <fullName>System Performance Issue Soiling</fullName>
                </value>
                <value>
                    <fullName>System Performance Issue Hardware</fullName>
                </value>
                <value>
                    <fullName>System Performance Issue Shading</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_M_Client__c</fullName>
        <formula>IF(ISBLANK( Contract_2__c),  Site__r.Account_Name__c ,
IF(ISBLANK( Paid_Contract__c),Site__r.Account_Name__c,
null))</formula>
        <label>O&amp;M Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Contract__c</fullName>
        <formula>Site__r.Paid_Contract__r.ContractNumber</formula>
        <inlineHelpText>pulls associated paid service contract from site</inlineHelpText>
        <label>Paid Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Paid Service Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Performance Data (Paid Service Contract)</relationshipLabel>
        <relationshipName>Performance_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Perf_Model_Notes__c</fullName>
        <label>Perf Model Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Performance_Notes__c</fullName>
        <label>Performance Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AlsoEnergy/Powertrack</fullName>
                </value>
                <value>
                    <fullName>Aurora Vision</fullName>
                </value>
                <value>
                    <fullName>Powerdash</fullName>
                </value>
                <value>
                    <fullName>First Wind</fullName>
                </value>
                <value>
                    <fullName>Draker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Performance Data</relationshipLabel>
        <relationshipName>Performance_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_ID__c</fullName>
        <inlineHelpText>ID from Also Energy/Powertrack</inlineHelpText>
        <label>Site ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Performance Data</relationshipLabel>
        <relationshipName>Performance_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>TimeStamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Uptime__c</fullName>
        <label>Uptime</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Performance Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Platform__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Site__c</columns>
        <columns>Site_ID__c</columns>
        <columns>O_M_Client__c</columns>
        <columns>Measured_Production__c</columns>
        <columns>Estimated_Production__c</columns>
        <columns>Expected_Production__c</columns>
        <columns>Actual_Estimate__c</columns>
        <columns>Actual_Expected__c</columns>
        <columns>GHI_Measured__c</columns>
        <columns>Estimated_GHI__c</columns>
        <columns>GHI_Percent__c</columns>
        <columns>Performance_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>August_Data</fullName>
        <columns>NAME</columns>
        <columns>Platform__c</columns>
        <columns>Site__c</columns>
        <columns>Site_ID__c</columns>
        <columns>Estimated_Production__c</columns>
        <columns>Expected_Production__c</columns>
        <columns>Estimated_GHI_kWh__c</columns>
        <columns>GHI_Measured__c</columns>
        <columns>GHI_Percent__c</columns>
        <columns>Measured_Production__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>8/1/2015</value>
        </filters>
        <label>August Data</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>May_Data</fullName>
        <columns>Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Actual_Estimate__c</columns>
        <columns>Actual_Expected__c</columns>
        <columns>Estimated_Production__c</columns>
        <columns>Expected_Production__c</columns>
        <columns>GHI_Measured__c</columns>
        <columns>GHI_Percent__c</columns>
        <columns>Perf_Model_Notes__c</columns>
        <columns>Performance_Notes__c</columns>
        <columns>Paid_Contract__c</columns>
        <columns>Contract_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>5/1/2015</value>
        </filters>
        <label>May Data</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Non_Powertrack_Data</fullName>
        <columns>NAME</columns>
        <columns>Site__c</columns>
        <columns>Site_ID__c</columns>
        <columns>Measured_Production__c</columns>
        <columns>Estimated_Production__c</columns>
        <columns>Expected_Production__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>7/1/2015</value>
        </filters>
        <filters>
            <field>Platform__c</field>
            <operation>notEqual</operation>
            <value>AlsoEnergy/Powertrack</value>
        </filters>
        <label>Non Powertrack Data</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Powertrack_July_Data</fullName>
        <columns>Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Site__c</columns>
        <columns>Site_ID__c</columns>
        <columns>Actual_Estimate__c</columns>
        <columns>Actual_Expected__c</columns>
        <columns>Estimated_Production__c</columns>
        <columns>Expected_Production__c</columns>
        <columns>Estimated_GHI__c</columns>
        <columns>GHI_Measured__c</columns>
        <columns>GHI_Percent__c</columns>
        <columns>Measured_Production__c</columns>
        <columns>O_M_Client__c</columns>
        <columns>Uptime__c</columns>
        <columns>Lost_Production__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>7/1/2015</value>
        </filters>
        <filters>
            <field>Platform__c</field>
            <operation>equals</operation>
            <value>AlsoEnergy/Powertrack</value>
        </filters>
        <label>Powertrack July Data</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Performance Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>